--- a/requirements.txt
+++ b/requirements.txt
@@ -1,183 +1,2 @@
-absl-py==2.1.0
-aiofiles==23.2.1
-altair==5.5.0
-annotated-types==0.7.0
-anyio==4.7.0
-appnope==0.1.4
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==3.0.0
-astunparse==1.6.3
-async-lru==2.0.4
-attrs==24.2.0
-babel==2.16.0
-beautifulsoup4==4.12.3
-bleach==6.2.0
-blinker==1.8.2
-cachetools==5.5.0
-certifi==2024.12.14
-cffi==1.17.1
-charset-normalizer==3.4.0
-click==8.1.7
-comm==0.2.2
-contourpy==1.3.1
-cycler==0.12.1
-debugpy==1.8.11
-decorator==5.1.1
-defusedxml==0.7.1
-distlib==0.3.9
-executing==2.1.0
-fastapi==0.115.6
-fastjsonschema==2.21.1
-ffmpy==0.4.0
-filelock==3.16.1
-Flask==3.0.3
-flatbuffers==24.3.25
-fonttools==4.55.3
-fqdn==1.5.1
-fsspec==2024.10.0
-gast==0.6.0
-gitdb==4.0.11
-GitPython==3.1.43
-google-pasta==0.2.0
-gradio==5.9.0
-gradio_client==1.5.2
-grpcio==1.68.1
-h11==0.14.0
-h5py==3.12.1
-httpcore==1.0.7
-httpx==0.28.1
-huggingface-hub==0.27.0
-idna==3.10
-imbalanced-learn==0.12.4
-ipykernel==6.29.5
-ipython==8.30.0
-isoduration==20.11.0
-itsdangerous==2.2.0
-jedi==0.19.2
-Jinja2==3.1.4
-joblib==1.4.2
-json5==0.10.0
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter-events==0.10.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyter_server==2.14.2
-jupyter_server_terminals==0.5.3
-jupyterlab==4.3.3
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-keras==3.7.0
-kiwisolver==1.4.7
-libclang==18.1.1
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.10.0
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mistune==3.0.2
-ml-dtypes==0.4.1
-mpmath==1.3.0
-namex==0.0.8
-narwhals==1.19.1
-nbclient==0.10.1
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.4.2
-nltk==3.9.1
-notebook==7.3.1
-notebook_shim==0.2.4
-numpy==2.0.2
-opt_einsum==3.4.0
-optree==0.13.1
-orjson==3.10.12
-overrides==7.7.0
-packaging==24.2
-pandas==2.2.3
-pandocfilters==1.5.1
-parso==0.8.4
-pexpect==4.9.0
-pillow==11.0.0
-platformdirs==4.3.6
-prometheus_client==0.21.1
-prompt_toolkit==3.0.48
-protobuf==5.29.1
-psutil==6.1.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyarrow==18.1.0
-pycparser==2.22
-pydantic==2.10.3
-pydantic_core==2.27.1
-pydeck==0.9.1
-pydub==0.25.1
-Pygments==2.18.0
-pyparsing==3.2.0
-python-dateutil==2.9.0.post0
-python-json-logger==3.2.0
-python-multipart==0.0.19
-pytz==2024.2
-PyYAML==6.0.2
-pyzmq==26.2.0
-referencing==0.35.1
-regex==2024.11.6
-requests==2.32.3
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.9.4
-rpds-py==0.22.3
-ruff==0.8.3
-safehttpx==0.1.6
-safetensors==0.4.5
-scikit-learn==1.6.0
-scipy==1.14.1
-seaborn==0.13.2
-semantic-version==2.10.0
-Send2Trash==1.8.3
-shellingham==1.5.4
-six==1.17.0
-smmap==5.0.1
-sniffio==1.3.1
-soupsieve==2.6
-stack-data==0.6.3
-starlette==0.41.3
-streamlit==1.41.1
-sympy==1.13.1
-tenacity==9.0.0
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
-tensorflow==2.18.0
-tensorflow-io-gcs-filesystem==0.37.1
-termcolor==2.5.0
-terminado==0.18.1
-threadpoolctl==3.5.0
-tinycss2==1.4.0
-tokenizers==0.21.0
-toml==0.10.2
-tomlkit==0.13.2
-torch==2.5.1
-tornado==6.4.2
-tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.47.1
-typer==0.15.1
-types-python-dateutil==2.9.0.20241206
-typing_extensions==4.12.2
-tzdata==2024.2
-uri-template==1.3.0
-urllib3==2.2.3
-uvicorn==0.34.0
-virtualenv==20.28.0
-wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==14.1
-Werkzeug==3.0.3
-wrapt==1.17.0
+flask
+requests
